ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fullcycle-ingress
spec:
  rules:
    - host: localhost  # Replace with your domain or hostname
      http:
        paths:
          - path: /car-list
            pathType: Prefix
            backend:
              service:
                name: car-list-service
                port:
                  number: 5000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-server-service
                port:
                  number: 3001
          - path: /graphql
            pathType: Prefix
            backend:
              service:
                name: graphql-server-service
                port:
                  number: 4000
